feat: add Kopexa Helm chart with necessary configurations and documentation updates

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: List changed charts
         id: list-changed
         run: |
-          changed=$(ct --config configs/ct.yaml list-changed)
+          changed=$(ct --config configs/ct.yml list-changed)
           charts=$(echo "$changed" | tr '\n' ' ' | xargs)
           if [[ -n "$changed" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
@@ -47,7 +47,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --debug --config configs/ct.yaml --lint-conf configs/lintconf.yaml
+        run: ct lint --debug --config configs/ct.yml --lint-conf configs/lintconf.yml
 
       - name: Run docs-testing (helm-docs)
         id: helm-docs
