--- a/configs/ct.yml
+++ b/configs/ct.yml
@@ -4,7 +4,7 @@ all: true
 chart-dirs:
   - charts
 excluded-charts:
-chart-repots:
+chart-repos:
   - openfga=https://openfga.github.io/helm-charts
 helm-extra-args: "--timeout 900s"
 validate-chart-schema: false
