--- a/.github/workflows/charts-publish.yml
+++ b/.github/workflows/charts-publish.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   publish:
     name: Publish Modified Helm Charts
-    if: github.event.pull_request.merged == true
+  #  if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
