fix: correct config file extension from cr.yaml to cr.yml and add missing cr.yml configuration

--- a/.github/workflows/charts-publish.yml
+++ b/.github/workflows/charts-publish.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Run Chart Releaser
         uses: helm/chart-releaser-action@v1.7.0
         with:
-          config: "configs/cr.yaml"
+          config: "configs/cr.yml"
           packages_with_index: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
