--- a/charts/kopexa/values.yaml
+++ b/charts/kopexa/values.yaml
@@ -36,7 +36,7 @@ kopexa:
 
     image:
       # -- Image repository for the Kopexa Frontend Service
-      repository: ""
+      repository: "ghcr.io/kopexa-grc/kopexa-frontend"
       # -- Specific version tag of the Kopexa Frontend image. View the latest version here
       tag: ""
       # -- Pulls image only if not present on the node
